k8s/admin-pdp-epp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-pdp-epp-deployment
  labels:
    app: admin-pdp-epp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-pdp-epp
  template:
    metadata:
      labels:
        app: admin-pdp-epp
    spec:
      containers:
        - name: admin-pdp-epp
          image: csd773/pm.server.admin-pdp-epp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50052
---
apiVersion: v1
kind: Service
metadata:
  name: admin-pdp-epp-service
spec:
  type: ClusterIP
  ports:
    - port: 50052
      targetPort: 50052
  selector:
    app: admin-pdp-epp
