k8s/admin.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-pdp-epp
  labels:
    app: admin-pdp-epp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-pdp-epp
  template:
    metadata:
      labels:
        app: admin-pdp-epp
    spec:
      containers:
        - name: admin-pdp-epp
          image: csd773/pm.server.admin-pdp-epp:latest
          imagePullPolicy: Always
          readinessProbe:
            grpc:
              port: 50051
              service: "resource-pdp"
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            grpc:
              port: 50051
              service: "resource-pdp"
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 50052
          volumeMounts:
              - name: config-volume
                mountPath: /config
                readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: bootstrap-config
---

apiVersion: v1
kind: Service
metadata:
  name: admin-epp-service
spec:
  selector:
    app: admin-epp
  ports:
    - name: grpc
      protocol: TCP
      port: 50052
      targetPort: 50052
