k8s/eventstore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventstore-deployment
  labels:
    app: eventstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventstore
  template:
    metadata:
      labels:
        app: eventstore
    spec:
      containers:
        - name: eventstore
          image: 'eventstore/eventstore:23.10.1-bookworm-slim'
          ports:
            - containerPort: 2113
            - containerPort: 1113
          volumeMounts:
            - name: eventstore-volume-data
              mountPath: /var/lib/eventstore
            - name: eventstore-volume-logs
              mountPath: /var/log/eventstore
      volumes:
        - name: eventstore-volume-data
          persistentVolumeClaim:
            claimName: eventstore-pvc-data
        - name: eventstore-volume-logs
          persistentVolumeClaim:
            claimName: eventstore-pvc-logs
---
kind: Service
apiVersion: v1
metadata:
  name: "eventstore"
spec:
  selector:
    app: "eventstore"
  ports:
    - protocol: "TCP"
      port: 2113
      targetPort: 2113
  clusterIP: None
