k8s/resource-pdp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-pdp-deployment
  labels:
    app: resource-pdp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-pdp
  template:
    metadata:
      labels:
        app: resource-pdp
    spec:
      containers:
        - name: resource-pdp
          image: csd773/pm.server.resource-pdp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: resource-pdp-service
spec:
  type: ClusterIP
  ports:
    - port: 50051
      targetPort: 50051
  selector:
    app: resource-pdp
