k8s/resource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-pdp
  labels:
    app: resource-pdp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-pdp
  template:
    metadata:
      labels:
        app: resource-pdp
    spec:
      containers:
        - name: resource-pdp
          image: csd773/pm.server.resource-pdp:latest
          imagePullPolicy: Always
          readinessProbe:
            grpc:
              port: 50051
              service: "resource-pdp"
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            grpc:
              port: 50051
              service: "resource-pdp"
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 50051
---

apiVersion: v1
kind: Service
metadata:
  name: resource-pdp-service
spec:
  selector:
    app: resource-pdp
  ports:
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
