k8s/grpc-routing.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grpc-routing
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - pm-server-gateway
  http:
    - match:
        - uri:
            prefix: /gov.nist.csd.pm.proto.pdp.AdminPDP
        - uri:
            prefix: /gov.nist.csd.pm.proto.epp.EPP
      route:
        - destination:
            host: admin-epp-service.default.svc.cluster.local
            port:
              number: 50052
    - match:
        - uri:
            prefix: /gov.nist.csd.pm.proto.pdp.ResourcePDP
      route:
        - destination:
            host: resource-pdp-service.default.svc.cluster.local
            port:
              number: 50051
